--- a/lesson1/exercises/src/app/chores-list/chores-list.component.html
+++ b/lesson1/exercises/src/app/chores-list/chores-list.component.html
@@ -1,6 +1,6 @@
 <div class="chores">
-   <h3>Today's Chores</h3>
-   <ul>
+   <h3 style="text-align: center; text-decoration: underline;">Today's Chores</h3>
+   <ul style="font-style: italic;">
       <li>{{chores[0]}}</li>
       <li>{{chores[1]}}</li>
       <li>{{chores[2]}}</li>
