--- a/lesson3/examples/src/app/skill-set/skill-set.component.css
+++ b/lesson3/examples/src/app/skill-set/skill-set.component.css
@@ -6,3 +6,14 @@ h3 {
 .skills {
    color: green;
 }
+
+.ol-style {
+   color: green;
+   text-align: left;
+   list-style-type: decimal;
+}
+
+.p-style {
+   color: red;
+   text-align: right;
+}
