--- a/lesson1/exercises/src/app/app.component.css
+++ b/lesson1/exercises/src/app/app.component.css
@@ -3,7 +3,7 @@
 }
 
 .container {
-background-color: pink;
+background-color: rgb(134, 224, 131);
 border: purple;
 border: solid;
 border-radius: 10px;
