--- a/lesson3/exercises/src/app/app.component.html
+++ b/lesson3/exercises/src/app/app.component.html
@@ -17,7 +17,7 @@
 
       <div class="col-6">
          <div class="shuttle-background" [style.backgroundColor]="color">
-            <img #rocketImage src="assets/images/LaunchCode_rocketline_white.png" height = "75" width = "75" [style.left]="0" [style.bottom]="0"/>
+            <img #rocketImage src = "assets/images/LaunchCode_rocketline_white.png" height = "75" width = "75" [style.left]="0" [style.bottom]="0"/>
          </div>
       </div>
       <div class="col-3">
@@ -34,8 +34,8 @@
       </div>
    </div>
    <div class="container-control-buttons">
-      <button (click) = "handleTakeOff()">Take Off</button>
-      <button (click) = "handleLand()">Land</button>
-      <button (click) = "handleAbortMission()">Abort Mission</button>
+      <button (click)="handleTakeOff()" [disabled]="!takeOffEnabled">Take Off</button>
+      <button (click)="handleLand(rocketImage)" [disabled]="takeOffEnabled">Land</button>
+      <button (click)="handleMissionAbort(rocketImage)" [disabled]="takeOffEnabled">Abort Mission</button>
    </div>
 </div>
